# Flat-Mesher

./: .gitignore  CMakeLists.txt  FlatMesher.sln  FlatMesher.vcxproj  FlatMesher.vcxproj.filters  FlatMesherGUI.pro  README.md  README.txt  main.cpp
cli/: CMakeLists.txt  README.md  README.txt
forms/: MainWindow.ui  MeshAnalyzer.ui
gui/: FlatMesherGUI.pro  README.md  README.txt
gui/forms/: MainWindow.ui
gui/include/: CollapsibleWidget.h  Configuration.h  EditorCommands.h  FileManager.h  GraphicsLineItem.h  GraphicsPointItem.h  GridGraphicsView.h  MainWindow.h  MeshAnalyzer.h  MeshEditor.h  SelectionMode.h  ViewportControls.h
gui/src/: Configuration.cpp  CustomSpinbox.cpp  EditorCommands.cpp  GraphicsLineItem.cpp  GraphicsPointItem.cpp  GridGraphicsView.cpp  Main.cpp  MainWindow.cpp  MessageManager.cpp  (+1 more)
include/: CollapsibleWidget.h  Configuration.h  CustomSpinbox.h  EditorCommands.h  FileManager.h  GraphicsLineItem.h  GraphicsPointItem.h  GridGraphicsView.h  MainWindow.h  MeshEditor.h  MessageManager.h  SelectedItems.h  ViewportControls.h
res/: Images.qrc
src/: BemgenMeshFormatter.cpp  CollapsibleWidget.cpp  Configuration.cpp  EditorCommands.cpp  FileManager.cpp  FlatMesh.cpp  FloorPlan.cpp  GraphicsLineItem.cpp  GraphicsPointItem.cpp  GridGraphicsView.cpp  IndexTriangle.cpp  IsInside.m  Line2.cpp  Main.cpp  MainWindow.cpp  Mesh.cpp  MeshAnalyzer.cpp  MeshEditor.cpp  Point2.cpp  Point3.cpp  Rectangle.cpp  Test.cpp  VTUMeshFormatter.cpp  ViewportControls.cpp
test/: mesh1.txt  test1.flat  test10.flat  test2.flat  test3.flat  test6.flat  test7.flat
(+13 files in other folders)
