CMAKE_MINIMUM_REQUIRED(VERSION 2.6)

SET(PROJ_NAME FlatMesher)

PROJECT(${PROJ_NAME} CXX)

SET(INCLUDE_DIR "${PROJECT_SOURCE_DIR}/include")
SET(SRC_DIR "${PROJECT_SOURCE_DIR}/src")

INCLUDE_DIRECTORIES(${INCLUDE_DIR})

FILE(GLOB CPP_FILES ${SRC_DIR}/*.cpp)
FILE(GLOB_RECURSE H_FILES ${INCLUDE_DIR}/*.h)
SET(SRC_FILES ${CPP_FILES} ${H_FILES})

ADD_EXECUTABLE(${PROJ_NAME} ${SRC_FILES})
