CMAKE_MINIMUM_REQUIRED(VERSION 2.8)

SET(PROJ_NAME FlatMesherCLI)

PROJECT(${PROJ_NAME} CXX)

SET(INCLUDE_DIR "${PROJECT_SOURCE_DIR}/../FlatMesher/include")
SET(SRC_DIR "${PROJECT_SOURCE_DIR}")

INCLUDE_DIRECTORIES(${INCLUDE_DIR})

FILE(GLOB CPP_FILES ${SRC_DIR}/*.cpp)
FILE(GLOB_RECURSE H_FILES ${INCLUDE_DIR}/*.h)
SET(SRC_FILES ${CPP_FILES} ${H_FILES})

FIND_PACKAGE(OpenMP)
IF(OPENMP_FOUND)
  SET(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} ${OpenMP_CXX_FLAGS}")
ENDIF()

IF (CMAKE_COMPILER_IS_GNUCXX)
  SET (CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++11")
ENDIF()

ADD_SUBDIRECTORY(../FlatMesher FlatMesher)
ADD_EXECUTABLE(${PROJ_NAME} ${SRC_FILES})
TARGET_LINK_LIBRARIES(${PROJ_NAME} FlatMesher)
